# phrader_bank

./: .gitignore  README.md
fw/: CMakeLists.txt  buttons.c  buttons.h  dac.c  dac.h  digiled.c  digiled.pio  internal_timer.c  internal_timer.h  leds.c  leds.h  leds_driver.c  leds_driver.h  phrader.c  phrader.h  potentiometer.c  potentiometer.h  readme.md  ws2812.c  ws2812.h  ws2812.pio
hw/: phrader face.studio3
hw/faceplate/: readme.md
